--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -27,7 +27,7 @@
             <aside>
                 <h3>Menu</h3>
                 <ul>
-                    <li><a href="/next">Next</a></li>
+                    <li><a href="/home">Home</a></li>
                 </ul>
             </aside>
 
